--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -18,9 +18,9 @@ jobs:
       - name: 'Install Node'
         uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: '18.7.x'
       - name: 'Install Deps'
-        run: npm i yarn -g && yarn
+        run: npm i yarn -g && yarn install --frozen-lockfile
       - name: 'Test'
         run: yarn coverage
       - name: 'Report Coverage'
