--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pacote/react-use-outside": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^20.4.1",
+    "@xenopomp/advanced-utils": "^1.2.1",
     "axios": "1.4.0",
     "axios-jwt": "^3.0.2",
     "classnames": "^2.3.2",
@@ -46,6 +47,7 @@
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "socket.io-client": "4.7.1",
+    "tailwindcss-themer": "^4.0.0",
     "tailwindcss-typescript": "^1.1.2",
     "that-sparks": "^0.1.8",
     "ts-custom-error": "^3.3.1",
