--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@pacote/react-use-outside": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tauri-apps/api": "^1.5.3",
     "@types/node": "^20.4.1",
     "@xenopomp/advanced-utils": "^1.2.1",
     "axios": "1.4.0",
