--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "@vitest/coverage-c8": "^0.33.0",
     "@vitest/coverage-v8": "^0.33.0",
-    "@xenopomp/advanced-types": "^1.0.5",
+    "@xenopomp/advanced-types": "^1.7.0",
     "autoprefixer": "^10.4.14",
     "cloc": "^1.96.0-cloc",
     "concurrently": "^8.2.0",
@@ -82,6 +82,7 @@
     "shx": "^0.3.4",
     "tailwindcss": "^3.3.2",
     "tsc": "^2.0.4",
+    "type-fest": "^4.10.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.3",
     "vite-tsconfig-paths": "^4.2.0",
